--- a/plugins/dynamix/DeviceIdentify.page
+++ b/plugins/dynamix/DeviceIdentify.page
@@ -32,7 +32,7 @@ $(function() {
 
 <table class='share_status small'>
 <thead><td style="width:33%">Title</td><td>Information</td></thead>
-<tbody id="disk_identify"><tr><td colspan='2' style='text-align:center;padding-top:12px'><i class='fa fa-spinner fa-spin'></i>&nbsp;<em>Please wait... retrieving S.M.A.R.T. information!</em></td></tr></tbody>
+<tbody id="disk_identify"><tr><td colspan='2' style='text-align:center;padding:24px'><i class='fa fa-circle-o-notch fa-spin fa-3x fa-fw'></i></td></tr></tbody>
 </table>
 <input type="button" value="Done" onclick="done()">
 
