--- a/plugins/dynamix/DeviceCapabilities.page
+++ b/plugins/dynamix/DeviceCapabilities.page
@@ -24,7 +24,7 @@ $(function() {
 </script>
 <table class='share_status small'>
 <thead><td style="width:33%">Feature</td><td>Value</td><td>Information</td></thead>
-<tbody id="disk_capabilities"><tr><td colspan='3' style='text-align:center;padding-top:12px'><i class='fa fa-spinner fa-spin'></i>&nbsp;<em>Please wait... retrieving S.M.A.R.T. information!</em></td></tr></tbody>
+<tbody id="disk_capabilities"><tr><td colspan='3' style='text-align:center;padding:24px'><i class='fa fa-circle-o-notch fa-spin fa-3x fa-fw'></i></td></tr></tbody>
 </table>
 <input type="button" value="Done" onclick="done()">
 
