--- a/plugins/dynamix.plugin.manager/Plugins.page
+++ b/plugins/dynamix.plugin.manager/Plugins.page
@@ -23,23 +23,7 @@ foreach (glob("/tmp/plugins/*.{plg,txt}", GLOB_NOSORT+GLOB_BRACE) as $entry) if 
 $check = $notify['version'] ? 0 : 1;
 ?>
 <link type="text/css" rel="stylesheet" href="/webGui/styles/jquery.filetree.css">
-<style>
-#plugin_tree{width:33%;height:200px;overflow-y:scroll;}
-div.spinner{display:none;position:absolute;left:46%;top:64px;height:32px;width:32px;margin:0 auto;
--webkit-animation: rotation .6s infinite linear;
--moz-animation: rotation .6s infinite linear;
--o-animation: rotation .6s infinite linear;
-animation: rotation .6s infinite linear;
-border-left:6px solid rgba(0,174,239,.15);
-border-right:6px solid rgba(0,174,239,.15);
-border-bottom:6px solid rgba(0,174,239,.15);
-border-top:6px solid rgba(0,174,239,.8);
-border-radius:100%;}
-@-webkit-keyframes rotation{from {-webkit-transform: rotate(0deg);} to {-webkit-transform: rotate(359deg);}}
-@-moz-keyframes rotation{from {-moz-transform: rotate(0deg);} to {-moz-transform: rotate(359deg);}}
-@-o-keyframes rotation{from {-o-transform: rotate(0deg);} to {-o-transform: rotate(359deg);}}
-@keyframes rotation{ from {transform: rotate(0deg);} to {transform: rotate(359deg);}}
-</style>
+<style>#plugin_tree{width:33%;height:200px;overflow-y:scroll}</style>
 
 <script src="<?autov('/webGui/javascript/jquery.filetree.js')?>"></script>
 <script>
@@ -105,6 +89,6 @@ $(function() {
 </script>
 <table class='tablesorter plugins shift' id='plugin_table'>
 <thead><tr><th></th><th>Plugin</th><th>Author</th><th>Version</th><th>Status</th><th>Uninstall</th></tr></thead>
-<tbody id="plugin_list"><tr><td colspan='6' style='text-align:center;padding:24px'><i class='fa fa-circle-o-notch fa-spin fa-3x fa-fw'></i></td><tr></tbody>
+<tbody id="plugin_list"><tr><td colspan="6"><div class="spinner"></div></td><tr></tbody>
 </table>
-<div class="spinner"></div>
+<div class="spinner fixed hide"></div>
