--- a/plugins/dynamix.plugin.manager/Update.page
+++ b/plugins/dynamix.plugin.manager/Update.page
@@ -15,7 +15,7 @@ Tag="thumbs-up"
  */
 ?>
 <?
-$empty = "<tr><td colspan='6' style='text-align:center;padding:24px'><i class='fa fa-circle-o-notch fa-spin fa-3x fa-fw'></i></td><tr>";
+$empty = "<tr><td colspan='6'><div class='spinner'></div></td><tr>";
 $version = $date = 'unknown';
 $bzroot = file_exists('/boot/previous/bzroot');
 $check = $notify['unraidos'] ? 0 : 1;
