--- a/plugins/dynamix/DeviceAttributes.page
+++ b/plugins/dynamix/DeviceAttributes.page
@@ -24,7 +24,7 @@ $(function() {
 </script>
 <table class='share_status small'>
 <thead><td style="width:40px">#</td><td>Attribute Name</td><td>Flag</td><td>Value</td><td>Worst</td><td>Threshold</td><td>Type</td><td>Updated</td><td>Failed</td><td style="width:145px">Raw Value</td></thead>
-<tbody id="disk_attributes"><tr><td colspan='10' style='text-align:center;padding:24px'><i class='fa fa-circle-o-notch fa-spin fa-3x fa-fw'></i></td></tr></tbody>
+<tbody id="disk_attributes"><tr><td colspan='10'><div class="spinner"></div></td></tr></tbody>
 </table>
 <input type="button" value="Done" onclick="done()">
 
