--- a/plugins/dynamix/DiskList.page
+++ b/plugins/dynamix/DiskList.page
@@ -19,7 +19,7 @@ Cond="$var['fsState']!='Stopped' && $var['shareDisk']!='no'"
 function displayDisks(all) {
   if (all == 'yes') {
     $.cookie('ssz','ssz',{path:'/'});
-    $('#disk_list').html("<tr><td colspan='8' style='text-align:center;padding:24px'><i class='fa fa-circle-o-notch fa-spin fa-3x fa-fw'></i></td></tr>");
+    $('#disk_list').html("<tr><td colspan='8'><div class='spinner'></div></td></tr>");
   }
   $.get('/webGui/include/DiskList.php',{compute:all,path:'<?=$path?>',scale:'<?=$display['scale']?>',number:'<?=$display['number']?>',fill:$.cookie('ssz')},function(data){
     $.removeCookie('ssz',{path:'/'})
