--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -240,6 +240,18 @@ div.vmtemplate:hover{background-color:#EDEAEF}
 div.vmtemplate{height:120px;width:120px;border:1px solid #F3F0F4}
 div.vmtemplate img{margin-top:20px}
 div.up{margin-top:-20px;border:1px solid #F3F0F4;padding:4px 6px;overflow:auto}
+div.spinner{height:32px;width:32px;margin:24px auto;
+-webkit-animation: rotation .6s infinite linear;
+-moz-animation: rotation .6s infinite linear;
+-o-animation: rotation .6s infinite linear;
+animation: rotation .6s infinite linear;
+border-left:6px solid rgba(0,174,239,.15);
+border-right:6px solid rgba(0,174,239,.15);
+border-bottom:6px solid rgba(0,174,239,.15);
+border-top:6px solid rgba(0,174,239,.8);
+border-radius:100%;}
+div.spinner.fixed{position:absolute;left:47%;top:40px}
+div.spinner.hide{display:none}
 pre.up{margin-top:0}
 pre{border:1px solid #F3F0F4;font-family:bitstream;font-size:12px;padding:0;overflow:auto;margin-bottom:10px;padding:10px}
 iframe#progressFrame{position:fixed;bottom:32px;left:60px;margin:0;padding:8px 8px 0 8px;width:100%;height:12px;line-height:12px;border-style:none;overflow:hidden;font-family:bitstream;font-size:11px;color:#808080;white-space:nowrap;z-index:-2}
